# test-bench

./: .clippy.toml  .dockerignore  .editorconfig  .eslintrc.json  .gcloudignore  .gitignore  .prettierignore  .prettierrc.json  .rustfmt.toml  ARCHITECTURE_REPORT.md  CLI_PHASE1_REPORT.md  CONTRIBUTING.md  Cargo.toml  DEPENDENCY_IMPLEMENTATION_GUIDE.md  DEPENDENCY_QUICK_REFERENCE.md  Dockerfile  ENTERPRISE_PROOF_SUMMARY.md  ENTERPRISE_PROOF_VALIDATION.md  INTEGRATION_VALIDATION_SUMMARY.md  LICENSE-APACHE  Makefile  PHASE2B_INFRA_WIRING_COMPLETE.md  PHASE2B_INTEGRATION_REPORT.md  PHASE3_COORDINATION_STRATEGY.md  PHASE3_IMPLEMENTATION_REPORT.md  README.md  SDK_IMPLEMENTATION_SUMMARY.md  cloudbuild-deploy.yaml  config.example.toml  docker-compose.yml  package-lock.json  package.json  tsconfig.json  tsconfig.test.json  tsup.config.ts  vitest.config.ts  vitest.integration.config.ts
.claude-flow/: .gitignore  CAPABILITIES.md  config.yaml
.claude-flow/metrics/: codebase-map.json  consolidation.json  performance.json  system-metrics.json  task-metrics.json
.claude-flow/reports/: phase-2b-llm-infra-integration.md
.github/: dependabot.yml
.github/workflows/: ci.yml  llm-benchmark.yml  npm-publish.yml  release.yml  security.yml
.swarm/: state.json
agents/: index.ts
agents/adversarial-prompt/: AGENT.md  cli.ts  handler.ts  index.ts
agents/benchmark-runner/: AGENT.md  cli.ts  handler.ts  index.ts
agents/bias-detection/: cli.ts  handler.ts  index.ts
cli/: Cargo.toml  README.md
cli-package/: README.md  package-lock.json  package.json  tsup.config.ts
cli/src/: error.rs  main.rs  output.rs
cli/src/commands/: analyze.rs  bench.rs  compare.rs  config.rs  dashboard.rs  eval.rs  fleet.rs  mod.rs  optimize.rs  test.rs
cli/tests/: integration_test.rs  integration_tests.rs
cli/tests/integration/: bench_tests.rs  cli_tests.rs  mod.rs
cloudrun-deploy/: Dockerfile  main.ts
core/: Cargo.toml
core/examples/: visualization_demo.rs
core/src/: lib.rs
core/src/analytics/: IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  cost_optimizer.rs  mod.rs  statistics.rs  tests.rs
core/src/api/: auth.rs  error.rs  graphql.rs  middleware.rs  mod.rs  models.rs  rest.rs  server.rs  websocket.rs
core/src/benchmarks/: config.rs  export.rs  fleet.rs  fleet_adapters.rs  fleet_api.rs  fleet_export.rs  fleet_manifest.rs  fleet_runner.rs  mod.rs  reporter.rs  results.rs  runner.rs  storage.rs
core/src/config/: mod.rs  models.rs
core/src/database/: config.rs  connection.rs  error.rs  mod.rs  models.rs
core/src/database/repositories/: audit.rs  benchmark.rs  evaluation.rs  job.rs  mod.rs  user.rs  worker.rs
core/src/distributed/: cluster.rs  coordinator.rs  health.rs  jobs.rs  mod.rs  protocol.rs  types.rs  worker.rs
core/src/evaluators/: coherence.rs  faithfulness.rs  llm_judge.rs  mod.rs  perplexity.rs  relevance.rs  text_analysis.rs
core/src/infra/: cache.rs  config.rs  errors.rs  llm_client.rs  mod.rs  rate_limit.rs  retry.rs  testing.rs  tracing.rs  vector.rs
core/src/monitoring/: collector.rs  dashboard.rs  events.rs  integration.rs  metrics.rs  mod.rs  prometheus.rs  websocket.rs
core/src/multimodal/: audio.rs  datasets.rs  evaluation.rs  image.rs  mod.rs  types.rs  video.rs
core/src/orchestration/: comparison.rs  mod.rs  ranking.rs  router.rs  types.rs
core/src/plugins/: api.rs  host.rs  loader.rs  manager.rs  mod.rs  registry.rs  runtime.rs  sandbox.rs  types.rs
core/src/providers/: anthropic.rs  azure_openai.rs  bedrock.rs  cohere.rs  error.rs  factory.rs  google.rs  groq.rs  huggingface.rs  infra_integration.rs  mistral.rs  mod.rs  models.rs  ollama.rs  openai.rs  perplexity.rs  replicate.rs  together.rs  traits.rs  types.rs
core/src/visualization/: ARCHITECTURE.md  QUICKSTART.md  README.md  charts.rs  dashboard.rs  mod.rs
core/src/visualization/templates/: base.html  benchmark_results.html  comparison.html  cost_analysis.html  trend_analysis.html
core/tests/: anthropic_integration.rs  fleet_integration_test.rs  openai_integration.rs  orchestration_integration_test.rs  simulator_integration_test.rs  visualization_integration_tests.rs
datasets/: Cargo.toml  README.md
deploy/: DEPLOYMENT.md  Dockerfile  cloudbuild.yaml  main.ts  server.ts  service.yaml  tsup.config.ts
docs/: ANTHROPIC_FINAL_SUMMARY.md  ANTHROPIC_IMPLEMENTATION_REPORT.md  API.md  ARCHITECTURE.md  ARCHITECTURE_DIAGRAMS.md  ARCHITECTURE_SUMMARY.md  CICD_SUMMARY.md  CI_CD.md  CLI_COMMAND_STRUCTURE.md  CLI_REFERENCE.md  CONFIGURATION.md  DATABASE.md  DEPENDENCY_ARCHITECTURE_DESIGN.md  DEPENDENCY_ARCHITECTURE_SUMMARY.md  DEPENDENCY_VALIDATION_CHECKLIST.md  DESIGN_DECISIONS.md  DEVOPS_FINAL_REPORT.md  DISTRIBUTED.md  DOCKER_DEPLOYMENT.md  ENTERPRISE_PROOF_RUN.md  EXECUTIVE_SUMMARY.md  FILE_TREE.md  FLEET_API.md  FLEET_API_IMPLEMENTATION.md  FLEET_BENCHMARKING_COMPLETE.md  FLEET_IMPLEMENTATION_SUMMARY.md  FLEET_MANIFEST_SYSTEM.md  FLEET_METRICS.md  FLEET_QUICK_START.md  FLEET_TEST_INVENTORY.md  FLEET_VALIDATION_REPORT.md  GITHUB_ACTIONS_SETUP.md  IMPLEMENTATION_ROADMAP.md  INFRA_INTEGRATION_ANALYSIS.md  LLM_DEV_OPS_SUITE_INTEGRATION_REPORT.md  MARKET_INSIGHTS_SUPPLEMENT.md  MARKET_RESEARCH_REPORT.md  METRICS_OUTPUT_EXTENSION_SUMMARY.md  MONITORING.md  MULTIMODAL.md  (+36 more)
examples/: api_server_example.rs  database_example.rs  distributed_example.rs  fleet-api-example.ts  fleet-manifest-example.json  fleet-manifest-example.yaml  fleet_runner_example.rs  monitoring_example.rs  plugin_example.md  sdk-usage.ts
manifests/: enterprise-proof-v1.yaml
migrations/: 20240320000001_initial_schema.sql
plans/: LLM-Test-Bench-Plan.md  PHASE5_ARCHITECTURE_DIAGRAM.md  PHASE5_ARCHITECTURE_SUMMARY.md  PHASE5_INDEX.md  PHASE5_QUICK_REFERENCE.md  PHASE5_TECHNICAL_ARCHITECTURE.md  Phase-4-Implementation-Plan.md  Phase2-Provider-Integration-Plan.md  Phase3-Benchmarking-System-Plan.md
scripts/: check-coverage.js  verify_phase4.sh
src/: cli.ts  index.ts
tests/: benchmarks.test.ts  config.test.ts  error-handling.test.ts  evaluators.test.ts  npm-wrapper.test.ts  providers.test.ts  setup.integration.ts  setup.ts
(+124 files in other folders)
